--- a/paperfortune/index.html
+++ b/paperfortune/index.html
@@ -41,7 +41,7 @@
                 <button onclick="showFortune(4)">4</button>
             </div>
 
-
+           <p>test</p>
     </main>
 
     <script src="js/main.js"></script>
